--- a/project-front/views/index.ejs
+++ b/project-front/views/index.ejs
@@ -79,7 +79,8 @@
                     }
                 };
 
-                xhr.open('POST', 'votre-endpoint-d-upload', true);
+                // Spécifiez l'URL correcte de votre endpoint d'upload ici
+                xhr.open('POST', 'http://localhost:6000/upload', true);
                 xhr.send(formData);
             }
         }
