Fixed path + typo.

--- a/project-front/src/app/file-management/file-management.component.html
+++ b/project-front/src/app/file-management/file-management.component.html
@@ -1,7 +1,7 @@
 <body>
     <div class="page-container">
         <div class="header">
-            <h2>Your Title</h2>
+            <h2>Uploader Website</h2>
         </div>
         <div class="white-box">
             <div class="file-buttons">
